added requirements, updated jenkinsfile

--- a/templates/cisco_ios_xe_router.j2
+++ b/templates/cisco_ios_xe_router.j2
@@ -4,7 +4,7 @@ service password-encryption
 !
 hostname {{ inventory_hostname }}
 !
-logging {{ logging_buff_size }}
+logging buffered {{ logging_buff_size }}
 !
 clock timezone {{ timezone }} {{ timezone_offset }} 0
 clock summer-time {{ timezone_summer }} recurring
